-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.0.0 RC 1
-
None
-
Mac 10.7
Installer 358
-
-
qtbase: 2aef22b77aa15eb0863a9585af77ccab04425dbd
This bug is a bit strange as I cannot reproduce it consistently.
Sometimes when opening an application (Assistant, Qt Creator or an example) it pops up. It does not append all the time and I did not find steps to reproduce it yet.
- resulted from
-
QTBUG-28250 Mac: Inconsistent behavior when lanched via command line or via the file browser
-
- Closed
-
| For Gerrit Dashboard: QTBUG-28281 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 42212,3 | Mac: make windows not restorable on 10.7 and later | stable | qt/qtbase | Status: MERGED | +2 | 0 |
| 62305,2 | Mac: make windows not restorable on 10.7 and later | 4.8 | qt/qt | Status: MERGED | +2 | 0 |